@@ -1,0 +1,49 @@
+#! /bin/bash
+# postinst script for apache2-mpm-__TYPE__
+#
+# see: dh_installdeb(1)
+
+set -e
+
+
+# summary of how this script can be called:
+#       * <postinst> `configure' <most-recently-configured-version>
+#       * <old-postinst> `abort-upgrade' <new version>
+#       * <conflictor's-postinst> `abort-remove' `in-favour' <package>
+#         <new-version>
+#       * <deconfigured's-postinst> `abort-deconfigure' `in-favour'
+#         <failed-install-package> <version> `removing'
+#         <conflicting-package> <version>
+#
+# for details, see http://www.debian.org/doc/debian-policy/ or
+# the debian-policy package
+
+case "$1" in
+    configure)
+        if [ -n "$2" ] && dpkg --compare-versions "$2" lt "2.4.4-4" ; then
+                if [ -d /usr/share/doc/apache2-mpm-__TYPE__ ] ; then
+                        RET=0
+                        rmdir /usr/share/doc/apache2-mpm-__TYPE__ > /dev/null 2>&1|| RET=$?
+                        if [ $RET = 0 ] ; then
+                                ln -s /usr/share/doc/apache2 /usr/share/doc/apache2-mpm-__TYPE__
+                        fi
+                fi
+        fi
+    ;;
+
+    abort-upgrade|abort-remove|abort-deconfigure)
+
+    ;;
+
+    *)
+        echo "postinst called with unknown argument \`$1'" >&2
+        exit 1
+    ;;
+esac
+
+# dh_installdeb will replace this with shell code automatically
+# generated by other debhelper scripts.
+
+#DEBHELPER#
+
+exit 0
