@@ -68,6 +68,16 @@ generate-maintainer-scripts:
 			fi ;\
 		done ;\
 	done
+	set -e ; \
+	for type in worker itk prefork event ; do \
+		for f in postinst preinst prerm links dirs lintian-overrides postrm; do \
+			if [ -e debian/apache2-mpm.$$f.in ] ; then \
+				perl -pe "s{__TYPE__}{$$type}g" < debian/apache2-mpm.$$f.in > debian/apache2-mpm-$$type.$$f ;\
+				chmod `/usr/bin/stat -c '%a' "debian/apache2-mpm.$$f.in"` debian/apache2-mpm-$$type.$$f ;\
+			fi ;\
+		done ;\
+	done
+
 
 clean build build-arch build-indep binary binary-arch binary-indep: %:
 	dh $@ --parallel --with autotools_dev
