@@ -27,8 +27,10 @@ apache2 (2.4.4-6) UNRELEASED; urgency=low
     environments (e.g. Perl maintainer scripts). Thanks to Robert Luberda
     for doing unexpected things, and providing patches for it, and to Axel
     Beckert for demangling shell specifics (Closes: #711479)
+  * Fix "copyright file missing after upgrade (policy 12.5)" and add these for
+    MPM transitional packages (Closes: #710914)
 
- -- Arno Töll <arno@debian.org>  Fri, 07 Jun 2013 16:47:22 +0200
+ -- Arno Töll <arno@debian.org>  Fri, 07 Jun 2013 16:56:44 +0200
 
 apache2 (2.4.4-5) unstable; urgency=low
 
